app/src/main/java/com/example/bookclub/errors/AccountEmailDuplicatedException.java
package com.example.bookclub.errors;

public class AccountEmailDuplicatedException extends RuntimeException {
    public AccountEmailDuplicatedException(String email) {
        super("Email is already existed: " + email);
    }
}
